--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	<title>Desenvolvedor Henrique Freitas</title>
-</head>
-<body>
-	<header>
-		<div id="header-interior">
-			<h1>Henrique Freitas</h1>
-		</div>
-	</header>
-	
-	<div id="home">
-		<h2>Henrique Freitas</h2>
-	</div>
-
-	<footer>
-	</footer>
-</body>
-</html>
+Hello world
