personal web page

--- a/index.html
+++ b/index.html
@@ -1,20 +1,427 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml">
+
+<!DOCTYPE html>
+<html>
 <head>
-	<title>Desenvolvedor Henrique Freitas</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>Henrique Freitas - Desenvolvedor Web</title>
+
+<link href="img/favicon.png" rel=icon>
+
+<link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet">
+
+
+
+<link href="css/bootstrap.min.css" rel="stylesheet">
+
+<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<div id="header-interior">
-			<h1>Henrique Freitas</h1>
-		</div>
-	</header>
-	
-	<div id="home">
-		<h2>Henrique Freitas</h2>
-	</div>
+<div id="main-wrapper">
 
-	<footer>
-	</footer>
-</body>
+<div id="preloader">
+<div id="status">
+<div class="status-mes"></div>
+</div>
+</div>
+<header class="header">
+<div class="container">
+<div class="row">
+<div class="col-md-3">
+<div class="profile-img">
+<img src="img/img-profile.jpg" class="img-responsive" alt="" />
+</div>
+
+</div>
+<div class="col-md-9">
+<div class="name-wrapper">
+<h1 class="name">Henrique Freitas</h1>
+<span>Desenvolvedor Web</span>
+</div>
+<p>
+Trabalho com Desenvolvimento Web utilizando principalmente JAVA e PHP.
+Com experiência em sistema corporativo com Java EE.
+Disponível para freelance nas tecnologias relacionadas abaixo.
+</p>
+<div class="row">
+<div class="col-md-3">
+<div class="personal-details">
+<strong>05 DE MAIO DE 1992</strong>
+<small>NASCIMENTO</small>
+</div>
+</div>
+<div class="col-md-3">
+<div class="personal-details">
+<strong>BRASIL</strong>
+<small>NACIONALIDADE</small>
+</div>
+</div>
+<div class="col-md-6">
+<div class="personal-details">
+<strong>PORTUGUÊS <span>(NATIVO)</span>, INGLÊS <span>(INTERMEDIÁRIO)</span></strong>
+<small>LINGUAGEM</small>
+</div>
+</div>
+</div>
+<ul class="social-icon">
+<li><a href="https://www.facebook.com/henrique.s.freitas"><img src="img/facebook.png"/></a></li>
+<li><a href="https://twitter.com/henrqfreitas"><img src="img/twitter.png"/></a></li>
+<li><a href="https://www.linkedin.com/in/henrique-freitas-85505357/"><img src="img/linkedin.png"/></a></li>
+<li><a href="https://github.com/henriquesfreitas"><img src="img/github.png"/></a></li>
+</ul>
+</div>
+</div>
+</div>
+</header>
+
+<section class="work-history-wrapper section-wrapper">
+<div class="container">
+<div class="row">
+	<div class="col-md-3">
+	<div class="section-title">
+	<h2>Competências</h2>
+	</div>
+	</div>
+	<div class="col-md-9">
+	<div class="row">
+		<div class="col-sm-3">
+		<div class="item-stats">
+		<div class="item-stats-value">Java</div>
+		<div class="item-stats-name">Intermediário</div>
+		</div>
+		</div>
+		<div class="col-sm-3">
+		<div class="item-stats">
+		<div class="item-stats-value">Java EE</div>
+		<div class="item-stats-name">Intermediário</div>
+		</div>
+		</div>
+		<div class="col-sm-3">
+		<div class="item-stats">
+		<div class="item-stats-value">JSF</div>
+		<div class="item-stats-name">Intermediário</div>
+		</div>
+		</div>
+		<div class="col-sm-3">
+		<div class="item-stats">
+		<div class="item-stats-value">WildFly</div>
+		<div class="item-stats-name">Intermediário</div>
+		</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-3">
+		<div class="item-stats">
+		<div class="item-stats-value">PHP</div>
+		<div class="item-stats-name">Intermediário</div>
+		</div>
+		</div>
+		<div class="col-sm-3">
+		<div class="item-stats">
+		<div class="item-stats-value">Laravel</div>
+		<div class="item-stats-name">Intermediário</div>
+		</div>
+		</div>
+		<div class="col-sm-3">
+		<div class="item-stats">
+		<div class="item-stats-value">HTML/CSS</div>
+		<div class="item-stats-name">Intermediário</div>
+		</div>
+		</div>
+		<div class="col-sm-3">
+		<div class="item-stats">
+		<div class="item-stats-value">Apache</div>
+		<div class="item-stats-name">Intermediário</div>
+		</div>
+		</div>
+		
+	</div>
+</div>
+</div>
+</section>
+
+<!--
+<section class="expertise-wrapper section-wrapper">
+<div class="container">
+<div class="row">
+<div class="col-md-3">
+<div class="section-title">
+<h2>My Specialities</h2>
+</div>
+</div>
+<div class="col-md-9">
+<div class="row">
+<div class="col-md-6">
+<div class="expertise-item">
+<h3>WordPress Theme Development</h3>
+<p>
+Synergistically strategize customer directed resources rather than principle.
+</p>
+</div>
+</div>
+<div class="col-md-6">
+<div class="expertise-item">
+<h3>Joomla Template Development </h3>
+<p>
+ Quickly repurpose reliable customer service with orthogonal ideas. Competently.
+</p>
+</div>
+</div>
+</div>
+<div class="row">
+<div class="col-md-6">
+<div class="expertise-item">
+<h3>Drupal Template Development</h3>
+<p>
+Interactively myocardinate high standards in initiatives rather than next-generation.
+</p>
+</div>
+</div>
+<div class="col-md-6">
+<div class="expertise-item">
+<h3>Shopify Theme Design</h3>
+<p>
+Dynamically initiate client-based convergence vis-a-vis performance based. </p>
+</div>
+</div>
+</div>
+</div>
+</div>
+
+</div>
+</section> 
+
+<section class="section-wrapper skills-wrapper">
+<div class="container">
+<div class="row">
+<div class="col-md-3">
+<div class="section-title">
+<h2>Skills</h2>
+</div>
+</div>
+<div class="col-md-9">
+<div class="row">
+<div class="col-md-6">
+<div class="progress-wrapper">
+<h3>CODING SKILLS</h3>
+<div class="progress-item">
+<span class="progress-title">HTML5</span>
+<div class="progress">
+<div class="progress-bar" role="progressbar" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100" style="width: 62%"><span class="progress-percent"> 62%</span>
+</div>
+</div>
+
+</div>
+
+<div class="progress-item">
+<span class="progress-title">CSS3</span>
+<div class="progress">
+<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"><span class="progress-percent"> 90%</span>
+</div>
+</div>
+
+</div>
+
+<div class="progress-item">
+<span class="progress-title">PHP</span>
+<div class="progress">
+<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"><span class="progress-percent"> 75%</span>
+</div>
+</div>
+
+</div>
+
+<div class="progress-item">
+<span class="progress-title">JavaScript</span>
+<div class="progress">
+<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"><span class="progress-percent"> 55%</span>
+</div>
+</div>
+
+</div>
+
+</div>
+
+</div>
+<div class="col-md-6">
+<div class="progress-wrapper">
+<h3>DESIGN TOOLS</h3>
+<div class="progress-item">
+<span class="progress-title">Photoshop</span>
+<div class="progress">
+<div class="progress-bar" role="progressbar" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100" style="width: 90%"><span class="progress-percent"> 90%</span>
+</div>
+</div>
+
+</div>
+
+<div class="progress-item">
+<span class="progress-title">Illustrator</span>
+<div class="progress">
+<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 70%"><span class="progress-percent"> 50%</span>
+</div>
+</div>
+
+</div>
+
+<div class="progress-item">
+<span class="progress-title">Sketch</span>
+<div class="progress">
+<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"><span class="progress-percent"> 75%</span>
+</div>
+</div>
+
+</div>
+
+<div class="progress-item">
+<span class="progress-title">MACAW</span>
+<div class="progress">
+<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"><span class="progress-percent"> 55%</span>
+</div>
+</div>
+
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+</div>
+</div>
+
+</section>
+-->
+<section class="section-wrapper section-experience">
+<div class="container">
+<div class="row">
+<div class="col-md-3">
+<div class="section-title"><h2>Experiência</h2></div>
+</div>
+<div class="col-md-9">
+<div class="row">
+<div class="col-md-6">
+<div class="content-item">
+<small>2011 - Atualmente</small>
+ <h3>Desenvolvedor Web</h3>
+<h4>SENAI</h4>
+<p>Tubarão - SC</p>
+</div>
+
+</div>
+<div class="col-md-6">
+<div class="content-item">
+<small>2011 - 2011</small>
+<h3>Desenvolvedor Web</h3>
+<h4>RJ45</h4>
+<p>Tubarão - SC</p>
+</div>
+
+</div>
+</div>
+<div class="row">
+<div class="col-md-6">
+<div class="content-item">
+<small>2010 - 2011</small>
+<h3>Desenvolvedor Web</h3>
+<h4>Tecmedia</h4>
+<p>Tubarão - SC</p>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+</div>
+
+</section>
+
+<section class="section-education section-wrapper">
+<div class="container">
+<div class="row">
+<div class="col-md-3">
+<div class="section-title"><h2>Formação</h2></div>
+</div>
+<div class="col-md-9">
+<div class="row">
+<div class="col-md-12">
+<div class="content-item">
+<small>2010 - 2014</small>
+<h3>Sistemas de Informação</h3>
+<h4>UNISUL</h4>
+<p>Tubarão - SC</p>
+</div>
+
+<div class="content-item">
+<small>2009 - 2010</small>
+<h3>Técnico em Programação</h3>
+<h4>CEDUP</h4>
+<p>Tubarão - SC</p>
+</div>
+
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+
+</section>
+
+<section class="section-contact section-wrapper">
+<div class="container">
+<div class="row">
+<div class="col-md-3">
+<div class="section-title">
+<h2>Contato</h2>
+</div>
+</div>
+<div class="col-md-9">
+<div class="row">
+<!--<div class="col-md-3">
+<address>
+<strong>Contato</strong>
+<br>
+1355 Market Street, Suite 900<br>
+San Francisco, CA 94103
+</address>
+</div>-->
+<div class="col-md-3">
+<address>
+<strong>Número</strong><br>
+48 996063680
+</address>
+</div>
+<!--<div class="col-md-3">
+<address>
+<strong>Mobile Number</strong><br>
+987 654 321
+</address>
+</div>
+<div class="col-md-3">
+<address>
+<strong>Email</strong><br>
+henriqusouza
+</address>
+</div>-->
+</div>
+
+</div>
+</div>
+
+</div>
+
+</section>
+
+<footer class="footer">
+
+</footer>
+
+</div>
 </html>
